force-app/main/default/objects/PropostaCompra__c/PropostaCompra__c.object-meta.xml
<CustomObject>
    <label>Proposta de compra</label>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Proposta de compra</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Propostas de compra</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>