force-app/main/default/objects/PropostaCompra__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Propostas de compra</relationshipLabel>
    <relationshipName>Propostas_de_compra</relationshipName>
    <type>Lookup</type>
</CustomField>