force-app/main/default/objects/PropostaCompra__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <description>Campo que representa a data da proposta de compra</description>
    <inlineHelpText>Data da proposta de compra</inlineHelpText>
    <label>Data</label>
    <type>Date</type>
</CustomField>