force-app/main/default/objects/PropostaCompra__c/fields/DataEntregaChaves__c.field-meta.xml
<CustomField>
    <fullName>DataEntregaChaves__c</fullName>
    <label>Data da entrega das chaves</label>
    <type>Date</type>
</CustomField>