force-app/main/default/objects/PropostaCompra__c/fields/Imovel__c.field-meta.xml
<CustomField>
    <fullName>Imovel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Imóvel</label>
    <referenceTo>Imovel__c</referenceTo>
    <relationshipLabel>Propostas de compra</relationshipLabel>
    <relationshipName>Propostas_de_compra</relationshipName>
    <type>Lookup</type>
</CustomField>