force-app/main/default/objects/PropostaCompra__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rascunho</fullName>
                <default>true</default>
                <label>Rascunho</label>
            </value>
            <value>
                <fullName>Em análise</fullName>
            </value>
            <value>
                <fullName>Aguardando</fullName>
            </value>
            <value>
                <fullName>Finalizada</fullName>
            </value>
            <value>
                <fullName>Reprovada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>